--- a/iThenticate/API/templates/get.xml
+++ b/iThenticate/API/templates/get.xml
@@ -12,6 +12,10 @@
                         <name>id</name>
                         <value><int>{id}</int></value>
                     </member>
+                    <member>
+                        <name>p</name>
+                        <value><string>{page}</string></value>
+                    </member>
                 </struct>
             </value>
         </param>
